--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Danh Ta Clothing</string>
-
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="button">Update The TextView</string>
+    <string name="title_activity_collection_view">CollectionViewActivity</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
